2013-01-17  Sancho Lerena <slerena@artica.es>

        * include/functions_ui.php: Fixed cache control for
        avoid send each time static contents. 0 is "always"
        instead "never" :-S

2013-01-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/languages/*.po,
	include/languages/*.mo: Updated strings for 4.0.3
	release.

2013-01-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* images/pandora_report_logo.png: uploaded image for
	report cover

2013-01-16  Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: Fixed a style error
	on module manager view.

2013-01-15  Dario Rodriguez <dario.rodriguez@artica.es>

	* pandora_console_install: Fixed directory install for
	SUSE.

2013-01-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions.php
	  include/constants.php
	  operation/events/events_list.php: Added two new
	  criticity modes in the event filter. Critical or warning
	  and not normal
	
	  Merged from trunk

2013-01-15  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_visual_map.php: Now warning modules with
	alert appear with warning image and orange border, before they
	appear with critical picture and orange border.

	FIXDE BUG: 3592771

2013-01-15 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/db/postgresql.php
	include/db/mysql.php
	include/db/oracle.php: Fixed function get_system_time when 
	timesource is system.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/include/styles/pandora.css: Fixed small
	bug in default skin css.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Now agents appear ordered by name.

	FIXED BUG: 3576294

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_component_groups.php
	 godmode/modules/manage_network_components.php: Don't remove 
	 parent component groups with childs assigned to components.
