@@ -1,3 +1,11 @@
+2013-01-17  Sergio Martin <sergio.martin@artica.es>
+
+	* operation/events/events_rss.php
+	operation/events/export_csv.php
+	operation/events/events_list.php
+	operation/events/events.php: Fixed several bugs of the filter 
+	of events in events viewer, csv and rss export tools
+
 2013-01-17  Sancho Lerena <slerena@artica.es>
 
         * include/functions_ui.php: Fixed cache control for
